# ml-experiment-control

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: quality.yml
docs/: cli_reference.md  development.md  downstream_contract.md  flow_coverage.md  http_contract.md  observability.md  project_lifecycle.md
examples/: local_smoke.py  minimal_project_adapter.py
rust/: Cargo.toml
rust/src/: main.rs
server/: README.md  pyproject.toml
server/examples/: ml-expd.yaml
server/src/ml_exp_server/: __init__.py  agent_protocol.py  api_contract.py  application.py  application_errors.py  authored_runs.py  campaign_lifecycle.py  cli.py  code_identity.py  collectord.py  controller_gateway.py  credentials.py  evidence_conflicts.py  http_auth.py  identity.py  incremental_io.py  intent_protocol.py  local_wandb_service.py  observability.py  observability_archive.py  observability_runtime.py  observability_store.py  operations.py  outward.py  project_config.py  project_imports.py  project_registry.py  project_service.py  research_operations.py  runtime.py  schemas.py  source_identity.py  source_revisions.py  storage.py  submissions.py  telemetry.py  terminal_snapshot.py  wandb_publisher.py
server/src/ml_exp_server/actions/: __init__.py  errors.py  files.py  policy.py  project_writes.py  service.py  store.py
server/src/ml_exp_server/agents/: __init__.py  store.py
server/src/ml_exp_server/api/: action_routes.py  agent_routes.py  app.py  errors.py  operation_routes.py  routes.py  sse.py  submission_routes.py
server/src/ml_exp_server/ingest/: freshness.py  indexer.py  runscan.py
server/tests/: conftest.py  test_action_edges.py  test_action_service_coverage.py  test_action_store_edges.py  test_actions.py  test_agent_epochs_and_turns.py  test_agents.py  test_api.py  test_api_adapter_edges.py  test_api_adapters.py  test_app_edges.py  test_application_deep_coverage.py  test_application_remaining.py  test_campaign_lifecycle.py  test_cli_edges.py  test_client_boundary.py  test_collectord.py  test_controller_gateway_coverage.py  test_controller_snapshot.py  test_coverage_infrastructure.py  test_coverage_stores_and_config.py  test_credentials.py  test_doctor_cli.py  test_durable_state.py  test_evidence_conflicts.py  test_http_auth.py  test_import_adapter_coverage.py  test_incremental_ingest.py  test_indexer_and_config.py  test_indexer_edges.py  test_local_wandb_service.py  test_observability.py  test_observability_api_security.py  test_observability_archive.py  test_observability_edges.py  test_observability_runtime.py  test_observability_runtime_edges.py  test_observability_store.py  test_observability_store_edges.py  test_process_smoke.py  (+17 more)
server/tests/fixtures/runs/backend-smoke-slurm-probe-20260712T0105/elf-smoke-slurm-l40s-probe-20260712T0105/: backend.json  events.jsonl  manifest.yaml  status.json
server/tests/fixtures/runs/backend-smoke-slurm-probe-20260712T0105/elf-smoke-slurm-l40s-probe-20260712T0105/attempts/attempt-001/: attempt.yaml  job.sbatch
server/tests/fixtures/runs/fusion-len256-gate-h100-20260711/elf-a1-frozen-t5-l256-s42-h100-v1/: collection.json  control_manifest.yaml  decision.json  events.jsonl  status.json
server/tests/fixtures/runs/fusion-len256-gate-h100-20260711/elf-a1-frozen-t5-l256-s42-h100-v1/attempts/attempt-001/: backend.json  control_attempt.yaml  job.sbatch
server/tests/fixtures/runs/fusion-len256-gate-h100-20260711/elf-a1-frozen-t5-l256-s42-h100-v1/collected_run/: manifest.yaml  status.json  train_metrics.jsonl
server/tests/fixtures/runs/fusion-len256-gate-h100-20260711/elf-a1-frozen-t5-l256-s42-h100-v1/collected_run/train_sampling_eval/clean-token-reconstruction-sccfg3.0-uncond/: metrics.jsonl
server/tests/fixtures/runs/fusion-len256-gate-h100-20260711/elf-a1-frozen-t5-l256-s42-h100-v1/collected_run/train_sampling_eval/sde-steps32-cfg1-sccfg3.0-ts_logit_normal-gamma1.5-uncond/: metrics.jsonl
src/experiment_control/: __init__.py  _local_worker.py  checkpoints.py  contracts.py  identity.py  manifest.py  observations.py  outbox.py  preflight.py  project.py  redaction.py  run_manifest.py  runner.py  safe_sco.py  states.py  submission.py
src/experiment_control/backends/: __init__.py  base.py  local.py  sensecore.py  services.py  wyd.py
tests/: backend_harness.py  test_backend_adapters.py  test_backend_edge_cases.py  test_backend_primitives.py  test_checkpoints.py  test_local_backend.py  test_manifest_store.py  test_minimal_project_adapter.py  test_observations.py  test_outbox.py  test_public_api.py  test_quality_tools.py  test_runner_and_states.py  test_safe_sco.py  test_submission_contract.py
tools/: coverage_gate.py  generate_cli_reference.py
