[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-experiment-control"
version = "0.1.0"
description = "Durable ML experiment backends and project-adapter contracts"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "ml-experiment-control contributors"}]
dependencies = ["PyYAML>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=6.0"]

[project.urls]
Repository = "https://github.com/NotDesigned/ml-experiment-control"
Issues = "https://github.com/NotDesigned/ml-experiment-control/issues"

[project.scripts]
experiment-safe-sco = "experiment_control.safe_sco:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["experiment_control"]

[tool.coverage.report]
show_missing = true
skip_covered = true
precision = 1
