[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-experiment-server"
version = "0.1.0"
description = "Independent daemon for ML code, project, and experiment control"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ml-experiment-control",
    "fastapi>=0.110",
    "opentelemetry-api>=1.39,<2",
    "opentelemetry-exporter-otlp-proto-http>=1.39,<2",
    "opentelemetry-sdk>=1.39,<2",
    "pydantic>=2.5",
    "PyYAML>=6.0",
    "uvicorn[standard]>=0.29",
]

[dependency-groups]
dev = [
    "httpx>=0.27",
    "httpx2>=0.0.4",
    "pytest>=8.0",
    "pytest-cov>=6.0",
]

[project.scripts]
ml-expd = "ml_exp_server.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["ml_exp_server"]

[tool.coverage.report]
show_missing = true
skip_covered = true
precision = 1

[tool.uv.sources]
ml-experiment-control = { workspace = true }
